--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -133,15 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Verify `streamsx` package version\n",
-    "\n",
-    "Run the cell below to check which version of the `streamsx` package is installed.  \n",
-    "\n",
-    "If you need to upgrade, use\n",
-    "\n",
-    "- `import sys`\n",
-    "- `!{sys.executable} -m pip install --user --upgrade streamsx` to upgrade the package.\n",
-    "- Or, use  `!{sys.executable} -m pip install --user streamsx==somever` to install a specific version of the package. \n"
+    "### 1.2 Import  the `streamsx` package and verify the package version"
    ]
   },
   {
@@ -246,7 +238,7 @@
    "outputs": [],
    "source": [
     "#Create a stream from the data using Topology.source\n",
-    "readings = topo.source(SensorReadingsSource(), name=\"Readings\")\n"
+    "readings = topo.source(SensorReadingsSource(), name=\"Readings\")"
    ]
   },
   {
@@ -338,7 +330,7 @@
     "# 3. Pass aggregation function to Window.aggregate\n",
     "# average_reading returns a list of the averages for each sensor,\n",
     "# use flat map to convert it to individual tuples, one per sensor\n",
-    "rolling_average = window.aggregate(average_reading).flat_map()\n"
+    "rolling_average = window.aggregate(average_reading).flat_map()"
    ]
   },
   {
@@ -378,7 +370,7 @@
     "    return tpl\n",
     "\n",
     "# Update the data on the rolling_average stream with the map transform\n",
-    "enriched_average = rolling_average.map(enrich)\n"
+    "enriched_average = rolling_average.map(enrich)"
    ]
   },
   {
@@ -604,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
