--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -57,42 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Optional: Upgrade the `streamsx.database` Python package\n",
-    "\n",
-    "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.database package.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install --user --upgrade streamsx.database"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
-    "you can find the user path with this command:<br/>\n",
-    "`\n",
-    "import sys\n",
-    "for e in sys.path:\n",
-    "    print(e)\n",
-    "`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
+    "### 1.2 Import  the `streamsx.database` package and verify the package version"
    ]
   },
   {
@@ -514,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
