--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -45,51 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Optional: Upgrade the `streamsx.eventstore` Python package\n",
-    "\n",
-    "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.eventstore package."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#!pip install --user --upgrade streamsx.eventstore"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
-    "you can find the user path with this command:<br/>\n",
-    "`\n",
-    "import sys\n",
-    "for e in sys.path:\n",
-    "    print(e)\n",
-    "`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.2 Add credentials for the IBM Streams service\n",
+    "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
@@ -110,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Import  the `streamsx.eventstore` package and verify the package version"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -125,34 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 (OPTIONAL) Update streamsx.eventstore toolkit with latest release\n",
-    "Get the **latest** streamsx.eventstore toolkit release from GitHub.\n",
-    "\n",
-    "The Streams toolkit will be downloaded and added to the Topology.\n",
-    "\n",
-    "In this case the latest released IBM Streams EventStore **toolkit** is used for building the Streams application und not the toolkit that it located on the IBM Streams build service."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import streamsx.eventstore as es\n",
-    "\n",
-    "# If url is None, then the latest toolkit release will be downloaded.\n",
-    "url=None\n",
-    "\n",
-    "# download event store toolkit from GitHub\n",
-    "eventstore_toolkit = es.download_toolkit(url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.4 Configure the connection to Db2 Event Store\n",
+    "### 1.3 Configure the connection to Db2 Event Store\n",
     "\n",
     "Update the name for the EventStore service/instance name.\n",
     "\n",
@@ -191,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.4.1 SSL - Keystore/Truststore\n",
+    "#### 1.3.1 SSL - Keystore/Truststore\n",
     "Functions to retrieve certificate file location and password. Information is mandatory for setting up the SSL connection between Event Store client and server."
    ]
   },
@@ -250,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.4.2 Setup application configuration\n",
+    "#### 1.3.2 Setup application configuration\n",
     "\n",
     "Run the cell below to configure the connection for the IBM Streams application.\n",
     "\n",
@@ -604,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
