--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -40,64 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Optional: Upgrade the `streamsx.hbase` Python package\n",
-    "\n",
-    "In the first step we have to check the already installed Python packages and if necessary, upgrade them.<br/>\n",
-    "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx.hbase` package."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install --user --upgrade streamsx\n",
-    "#!pip install --user --upgrade streamsx.hbase\n",
-    "#!pip list | grep streamsx.hbase"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
-    "you can find the user path with this command:<br/>\n",
-    "`\n",
-    "import sys\n",
-    "for e in sys.path:\n",
-    "    print(e)\n",
-    "`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import streamsx.hbase as hb\n",
-    "import streamsx.topology.context\n",
-    "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.hbase package version: \" + hb.__version__)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.2 Add credentials for the IBM Streams service\n",
+    "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
@@ -115,6 +58,25 @@
     "from icpd_core import icpd_util\n",
     "streams_instance_name = \"my-instance\" ## Change \"my-instance\" to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Import  the `streamsx.hbase` package and verify the package version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamsx.hbase as hb\n",
+    "import streamsx.topology.context\n",
+    "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
+    "print(\"INFO: streamsx.hbase package version: \" + hb.__version__)"
    ]
   },
   {
@@ -175,7 +137,7 @@
     "\n",
     "\n",
     "# create a Topology object\n",
-    "topo = Topology(name=\"hbase\")\n"
+    "topo = Topology(name=\"hbase\")"
    ]
   },
   {
@@ -206,8 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#url_hbase_version = 'https://github.com/IBMStreams/streamsx.hbase/releases/download/v3.8.0/streamsx.hbase.toolkits-3.8.0-20190829-1529.tgz'\n",
-    "#hbase_toolkit_location = hbase.download_toolkit(url=url_hbase_version)\n",
+    "#hbase_toolkit_location = hbase.download_toolkit()\n",
     "#streamsx.spl.toolkit.add_toolkit(topo, hbase_toolkit_location)"
    ]
   },
@@ -258,7 +219,7 @@
     "\n",
     "putStream = _create_stream_for_put(topo) \n",
     "put_rows = hbase.put(putStream, table_name=table_name, connection=hbase_connection)\n",
-    "put_rows.print()\n"
+    "put_rows.print()"
    ]
   },
   {
@@ -285,7 +246,7 @@
     "\n",
     "getStream = _create_query_stream_for_get(topo) \n",
     "get_rows = hbase.get(getStream, table_name=table_name, row_attr_name=\"who\", connection=hbase_connection, name=\"HbaseGet\")\n",
-    "get_rows.print()\n"
+    "get_rows.print()"
    ]
   },
   {
@@ -435,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
