--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -42,64 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Optional: Upgrade the `streamsx.hdfs` Python package\n",
-    "In the first step we have to check the already installed Python packages and if necessary, upgrade them. <br/>\n",
-    "\n",
-    "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx` and `streamsx.hdfs` package."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install --user --upgrade streamsx\n",
-    "#!pip install --user --upgrade streamsx.hdfs\n",
-    "#!pip list | grep streamsx.hdfs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path. <br/>\n",
-    "you can find the user path  with this command:<br/>\n",
-    "`\n",
-    "import sys\n",
-    "for e in sys.path:\n",
-    "    print(e)\n",
-    "`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import streamsx.hdfs as hdfs\n",
-    "import streamsx.topology.context\n",
-    "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.hdfs package version: \" + hdfs.__version__)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.2 Add credentials for the IBM Streams service\n",
+    "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
@@ -117,6 +60,25 @@
     "from icpd_core import icpd_util\n",
     "streams_instance_name =\"my_instance\" ## Change \"my_instance\" to current running Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Import  the `streamsx.hdfs` package and verify the package version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamsx.hdfs as hdfs\n",
+    "import streamsx.topology.context\n",
+    "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
+    "print(\"INFO: streamsx.hdfs package version: \" + hdfs.__version__)"
    ]
   },
   {
@@ -186,7 +148,7 @@
     "\n",
     "\n",
     "# create a Topology object\n",
-    "topo = Topology(name=\"hdfs\")\n"
+    "topo = Topology(name=\"hdfs\")"
    ]
   },
   {
@@ -206,7 +168,7 @@
    "outputs": [],
    "source": [
     "#hdfs_toolkit_location = hdfs.download_toolkit()\n",
-    "#streamsx.spl.toolkit.add_toolkit(topo, hdfs_toolkit_location)\n"
+    "#streamsx.spl.toolkit.add_toolkit(topo, hdfs_toolkit_location)"
    ]
   },
   {
@@ -320,7 +282,7 @@
     "scannedFileNames = hdfs.scan(topo, credentials=hdfs_credentials, directory=dir_name, pattern='sample.*txt', init_delay=10)\n",
     "\n",
     "# prints scanned file names.\n",
-    "scannedFileNames.print(name='printScannedFileNames')\n"
+    "scannedFileNames.print(name='printScannedFileNames')"
    ]
   },
   {
@@ -489,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
