--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -72,9 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Optional: Upgrade the `streamsx.kafka` Python package\n",
-    "\n",
-    "Uncomment and run the cell below to upgrade to the latest version of the `streamsx.kafka` package.\n"
+    "### 1.2 Import  the `streamsx.kafka` package and verify the package version"
    ]
   },
   {
@@ -83,40 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install --user --upgrade streamsx.kafka"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
-    "you can find the user path with this command:<br/>\n",
-    "`\n",
-    "import sys\n",
-    "for e in sys.path:\n",
-    "    print(e)\n",
-    "`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
     "import streamsx.kafka as kafka\n",
     "import streamsx.topology.context as context\n",
     "print (\"INFO: streamsx package version: \" + context.__version__)\n",
@@ -713,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
