--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -127,44 +127,7 @@
    "source": [
     "<a id=\"setupPackages\"></a>\n",
     "\n",
-    "## 1.2 Optional: Upgrade streamsx Python packages\n",
-    "\n",
-    "As described in the [overview](#overview), we need the Python packages providing the Streams functionality to create streaming applications using Python, __streamsx__ and __streamsx.pmml__. These packages are already installed on the system. <br>\n",
-    "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.pmml package.\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install --user --upgrade streamsx.pmml"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
-    "you can find the user path with this command:<br/>\n",
-    "`\n",
-    "import sys\n",
-    "for e in sys.path:\n",
-    "    print(e)\n",
-    "`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
+    "### 1.2 Import  the `streamsx.pmml` package and verify the package version"
    ]
   },
   {
@@ -393,8 +356,7 @@
     "                                                   row[\"bloodPotassionConcentration\"],\n",
     "                                                   row[ \"referenceDrug\"],\n",
     "                                                   row[\"Na_to_K\"],row[\"predictedDrug\"]),\n",
-    "                                        schema=scoredData)\n",
-    "\n"
+    "                                        schema=scoredData)"
    ]
   },
   {
@@ -464,8 +426,7 @@
     "\n",
     "# Other options include:\n",
     "# invoke another sink function:\n",
-    "# score.for_each(func=send_to_db)\n",
-    " "
+    "# score.for_each(func=send_to_db)"
    ]
   },
   {
@@ -518,7 +479,7 @@
     "print(submission_result)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result.job:\n",
-    "    print(\"JobId: \", submission_result.job.id , \"Name: \", submission_result.job.name)\n"
+    "    print(\"JobId: \", submission_result.job.id , \"Name: \", submission_result.job.name)"
    ]
   },
   {
@@ -645,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
