change Streams-KafkaBasicSample.ipynb to use topology composites

--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "### 1.3 Configure the connection to the Kafka cluster\n",
     "\n",
-    "Kafka consumers and producers are configured by properties. They are described in the Kafka documentation in separate sections for [producer configs](https://kafka.apache.org/22/documentation.html#producerconfigs) and [consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs). In Python, you will be using a `dict` variable for the properties.\n",
+    "Kafka consumers and producers are configured by properties. They are described in the Kafka documentation in separate sections for [producer configs](https://kafka.apache.org/23/documentation.html#producerconfigs) and [consumer configs](https://kafka.apache.org/23/documentation.html#consumerconfigs). In Python, you will be using a `dict` variable for the properties.\n",
     "\n",
     "The operators of the underlying SPL toolkit set defaults for some properties. You can review these operator provided defaults in the [toolkit documentation](https://ibmstreams.github.io/streamsx.kafka/doc/spldoc/html/) under **Operators**.\n",
     "\n",
@@ -131,6 +131,12 @@
     "\n",
     "In the Kafka broker, create a partitioned topic, for example with three partitions.\n",
     "\n",
+    "### 1.3.2 When you connect with IBM Event Streams in the public IBM cloud\n",
+    "\n",
+    "IBM Event Streams in the public cloud is a fully managed Kafka broker. You connect it by using _service credentials_. You can easily [generate a Kafka configuration from Event Streams service credentials](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties_for_eventstreams):\n",
+    "\n",
+    "    credentials = ... # either a file name or the credentials JSON as a string\n",
+    "    kafka_config = streamsx.kafka.create_connection_properties_for_eventstreams(credentials)\n",
     "\n",
     "<a id=\"create_1\"></a>\n",
     "# 2. Create the consumer application\n",
@@ -228,13 +234,13 @@
     "These properties can therefore not be used together with a different topology.\n",
     "</div>\n",
     "\n",
-    "The `group.id` config is not required here. The group identifier is specified on Python API level later. However, when you need other special [Kafka consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs), you should add them to the `consumer_configs` dict variable here.\n",
+    "The `group.id` config is not required here. The group identifier is specified on Python API level later. However, when you need other special [Kafka consumer configs](https://kafka.apache.org/23/documentation.html#consumerconfigs), you should add them to the `consumer_configs` dict variable here.\n",
     "\n",
     "## 2.2 Create the consumer group\n",
     "\n",
     "From the Kafka broker we fetch keyed messages, where the message type is a string. In addition to it we want to fetch the message meta data, like partition number, message timestamp, and other.\n",
     "\n",
-    "That's why we specify `Schema.StringMessageMeta` as the schema for the created Stream in the [kafka.subscribe](https://streamsxkafka.readthedocs.io/en/latest/index.html#streamsx.kafka.subscribe) function.\n",
+    "That's why we specify `Schema.StringMessageMeta` as the schema for the created Stream.\n",
     "\n",
     "This schema is a structured schema that defines following attributes:\n",
     "\n",
@@ -245,7 +251,7 @@
     "- offset(int) - the offset of the message within the topic partition (64 bit)\n",
     "- messageTimestamp(int) - the message timestamp in milliseconds since epoch (64 bit)\n",
     "\n",
-    "Create the stream `received` by subscribing to the Kafka topic, parallelize the source with `set_parallel` and combine the parallel streams with `end_parallel`. The result is a stream created by a consumer group with three consumers.\n"
+    "Create the source stream `received` by creating a _KafkaConsumer_ instance that subscribes as a _consumer group_ to the Kafka topic. The resulting stream is split into multiple channels, which can be processed in parallel. Here, we immediately combine the parallel channels with `end_parallel`. The result is a stream created by a consumer group with three consumers, which share the topic partitions.\n"
    ]
   },
   {
@@ -254,15 +260,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumerSchema = Schema.StringMessageMeta\n",
-    "received = kafka.subscribe(\n",
-    "    consumer_topology,\n",
-    "    topic=topic,\n",
-    "    schema=consumerSchema,\n",
-    "    group=kafka_group_id,  # when not specified it is the job name, concatenated with the topic\n",
-    "    kafka_properties=consumer_configs,\n",
-    "    name=\"SensorSubscribe\"\n",
-    "    ).set_parallel(3).end_parallel()\n"
+    "from streamsx.kafka import KafkaConsumer\n",
+    "consumer = KafkaConsumer(config=consumer_configs,\n",
+    "                         topic=topic,\n",
+    "                         schema=Schema.StringMessageMeta,\n",
+    "                         group_id=kafka_group_id,\n",
+    "                         group_size=3)\n",
+    "\n",
+    "received = consumer_topology.source(consumer, name='SensorSubscribe').end_parallel()"
    ]
   },
   {
@@ -377,7 +382,7 @@
    "source": [
     "## 3.2 Publish the data to the Kafka topic\n",
     "\n",
-    "For advanced producer configurations please review the [producer configs section](https://kafka.apache.org/21/documentation.html#producerconfigs) of the Kafka documentation. Here we setup only the `bootstrap.servers` as used for the consumers. For a Kafka basic install out of the box this is sufficient. When you have configured authentication or other security options for the consumer, you must configure the same options also for the producer.\n",
+    "For advanced producer configurations please review the [producer configs section](https://kafka.apache.org/23/documentation.html#producerconfigs) of the Kafka documentation. Here we setup only the `bootstrap.servers` as used for the consumers. For a Kafka basic install out of the box this is sufficient. When you have configured authentication or other security options for the consumer, you must configure the same options also for the producer.\n",
     "\n",
     "### 3.2.1 Create the producer properties from your connection details\n",
     "\n",
@@ -394,6 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from streamsx.kafka import KafkaProducer\n",
+    "\n",
     "producer_configs = kafka.create_connection_properties(\n",
     "    bootstrap_servers=bootstrap_servers,\n",
     "    use_TLS=connect_tls,      \n",
@@ -412,11 +419,8 @@
     "    print(key + \"=\" + value)\n",
     "print()\n",
     "\n",
-    "kafkaSink = kafka.publish(\n",
-    "    sensorStream,\n",
-    "    topic=topic,\n",
-    "    kafka_properties=producer_configs,\n",
-    "    name=\"SensorPublish\")"
+    "producer = KafkaProducer(config=producer_configs, topic=topic)\n",
+    "sensorStream.for_each(producer, name='SensorPublish')"
    ]
   },
   {
@@ -578,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
