--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "### 1.3 Configure the connection to the Kafka cluster\n",
     "\n",
-    "Kafka consumers and producers are configured by properties. They are described in the Kafka documentation in separate sections for [producer configs](https://kafka.apache.org/22/documentation.html#producerconfigs) and [consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs). In Python, you will be using a `dict` variable for the properties.\n",
+    "Kafka consumers and producers are configured by properties. They are described in the Kafka documentation in separate sections for [producer configs](https://kafka.apache.org/23/documentation.html#producerconfigs) and [consumer configs](https://kafka.apache.org/23/documentation.html#consumerconfigs). In Python, you will be using a `dict` variable for the properties.\n",
     "\n",
     "The operators of the underlying SPL toolkit set defaults for some properties. You can review these operator provided defaults in the [toolkit documentation](https://ibmstreams.github.io/streamsx.kafka/doc/spldoc/html/) under **Operators**.\n",
     "\n",
@@ -131,6 +131,12 @@
     "\n",
     "In the Kafka cluster, create a partitioned topic, for example with three partitions.\n",
     "\n",
+    "### 1.3.2 When you connect with IBM Event Streams in the public IBM cloud\n",
+    "\n",
+    "IBM Event Streams in the public cloud is a fully managed Kafka broker. You connect it by using _service credentials_. You can easily [generate a Kafka configuration from Event Streams service credentials](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties_for_eventstreams):\n",
+    "\n",
+    "    credentials = ... # either a file name or the credentials JSON as a string\n",
+    "    kafka_config = streamsx.kafka.create_connection_properties_for_eventstreams(credentials)\n",
     "\n",
     "<a id=\"create_1\"></a>\n",
     "# 2. Create the consumer application\n",
@@ -229,7 +235,7 @@
     "These properties can therefore not be used within a different topology.\n",
     "</div>\n",
     "\n",
-    "The `group.id` config is not required here. The group identifier is specified on Python API level later. However, when you need other special [consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs), you should add them to the `consumer_configs` dict variable here.\n",
+    "The `group.id` config is not required here. The group identifier is specified on Python API level later. However, when you need other special [consumer configs](https://kafka.apache.org/23/documentation.html#consumerconfigs), you should add them to the `consumer_configs` dict variable here.\n",
     "\n",
     "## 2.2 Create the consumer group\n",
     "\n",
@@ -246,7 +252,7 @@
     "- offset(int) - the offset of the message within the topic partition (64 bit)\n",
     "- messageTimestamp(int) - the message timestamp in milliseconds since epoch (64 bit)\n",
     "\n",
-    "Create the stream `received` by subscribing to the Kafka topic, parallelize the source with `set_parallel` and combine the parallel streams with `end_parallel`. The result is a stream created by a consumer group with three consumers.\n"
+    "Create the stream `received` by subscribing to the Kafka topic, parallelize the source by setting the `group_size` greater than 1, and combine the parallel channels with `end_parallel`. The result is a stream created by a consumer group with three consumers."
    ]
   },
   {
@@ -255,15 +261,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumerSchema = Schema.StringMessageMeta\n",
-    "received = kafka.subscribe(\n",
-    "    consumer_topology,\n",
-    "    topic=topic,\n",
-    "    schema=consumerSchema,\n",
-    "    group=kafka_group_id, # when not specified it is the job name, concatenated with the topic\n",
-    "    kafka_properties=consumer_configs,\n",
-    "    name=\"SensorSubscribe\"\n",
-    "    ).set_parallel(3).end_parallel()"
+    "from streamsx.kafka import KafkaConsumer\n",
+    "consumer = KafkaConsumer(config=consumer_configs,\n",
+    "                         topic=topic,\n",
+    "                         schema=Schema.StringMessageMeta,\n",
+    "                         group_id=kafka_group_id,\n",
+    "                         group_size=3)\n",
+    "\n",
+    "received = consumer_topology.source(consumer, name='SensorSubscribe').end_parallel()"
    ]
   },
   {
@@ -494,6 +499,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from streamsx.kafka import KafkaProducer\n",
+    "\n",
     "producer_configs = kafka.create_connection_properties(\n",
     "    bootstrap_servers=bootstrap_servers,\n",
     "    use_TLS=connect_tls,      \n",
@@ -506,16 +513,12 @@
     "    password=password,\n",
     "    topology=producer_topology)\n",
     "\n",
-    "kafkaSink = kafka.publish(\n",
-    "    sensorStream,\n",
-    "    topic=topic,\n",
-    "    kafka_properties=producer_configs,\n",
-    "    name=\"SensorPublish\")\n",
-    "\n",
     "# print the producer configs for reference. Note, that they can contain sensitive data\n",
     "print()\n",
     "for key, value in producer_configs.items():\n",
-    "    print(key + \"=\" + value)"
+    "    print(key + \"=\" + value)\n",
+    "\n",
+    "sensorStream.for_each(KafkaProducer(config=producer_configs, topic=topic), name='SensorPublish')"
    ]
   },
   {
@@ -677,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
