change Streams-EventStreamsSample to use streamsx.kafka

--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Import  the `streamsx.eventstreams` package and verify the package version"
+    "### 1.2 Import  the `streamsx.kafka` package and verify the package version"
    ]
   },
   {
@@ -72,10 +72,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import streamsx.eventstreams as eventstreams\n",
+    "import streamsx.kafka as kafka\n",
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.eventstreams package version: \" + eventstreams.__version__)"
+    "print(\"INFO: streamsx.kafka package version: \" + kafka.__version__)"
    ]
   },
   {
@@ -115,8 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an application configuration in the IBM Streams service for the Event Streams service credentials.\n",
-    "This is the safest way to avoid the credentials being exposed."
+    "Create the Kafka connection configuration and store it in an application configuration in the IBM Streams service. This is the safest way to avoid the credentials being exposed."
    ]
   },
   {
@@ -130,9 +129,11 @@
     "\n",
     "cfg[streamsx.topology.context.ConfigParams.SSL_VERIFY] = False\n",
     "instance = Instance.of_service(cfg)\n",
-    "app_config_name = eventstreams.configure_connection(instance,\n",
-    "                                                    name='eventstreams',\n",
-    "                                                    credentials=eventstreams_credentials_json)\n",
+    "app_config_name = kafka.configure_connection_from_properties(\n",
+    "    instance=instance,\n",
+    "    name='kafka_event_streams',\n",
+    "    properties=kafka.create_connection_properties_for_eventstreams(eventstreams_credentials_json),\n",
+    "    description='Kafka connection for event streams')\n",
     "print(\"INFO: Name of your application configuration: \" + app_config_name)"
    ]
   },
@@ -262,10 +263,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eventstreams.publish(readings,\n",
-    "                     topic,\n",
-    "                     credentials=app_config_name,\n",
-    "                     name=\"EventStrPublish\")"
+    "from streamsx.kafka import KafkaProducer\n",
+    "readings.for_each(KafkaProducer(config=app_config_name, topic=topic),\n",
+    "                  name='EventStrPublish')"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "source": [
     "**Summary:**\n",
     "\n",
-    "By now, you have defined a streaming application that generates simulated data and publishes the data in a topic within an Eventstreams service. You could submit the application now, so that any other application could consume the data from the Eventstreams service.\n",
+    "By now, you have defined a streaming application that generates simulated data and publishes the data in a topic within an Event Streams service. You could submit the application now, so that any other application could consume the data from the Event Streams service.\n",
     "\n",
     "In the next steps, you extend the `topo` topology by a consumer that consumes and analyzes the data."
    ]
@@ -283,9 +283,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 Subscribe to the Eventstreams topic and consume the data\n",
+    "## 2.3 Subscribe to the Event Streams topic and consume the data\n",
     "\n",
-    "When you subscribe to the topic, you create a new data source, that connects to the Eventstreams service. The stream of data shall have the  `Json` schema."
+    "When you subscribe to the topic, you create a new source, that connects to the Event Streams service. The stream of data shall have the  `Json` schema."
    ]
   },
   {
@@ -295,12 +295,13 @@
    "outputs": [],
    "source": [
     "from streamsx.topology.schema import CommonSchema\n",
+    "from streamsx.kafka import KafkaConsumer\n",
     "# create a new Json stream in the topology\n",
-    "sensordata = eventstreams.subscribe(topo,\n",
-    "                                    topic,\n",
-    "                                    CommonSchema.Json,\n",
-    "                                    credentials=app_config_name,\n",
-    "                                    name=\"EventStrSubscribe\")"
+    "\n",
+    "sensordata = topo.source(KafkaConsumer(config=app_config_name, \n",
+    "                                       topic=topic, \n",
+    "                                       schema=CommonSchema.Json),\n",
+    "                         name='EventStrSubscribe')"
    ]
   },
   {
@@ -517,7 +518,7 @@
    "source": [
     "# Summary\n",
     "\n",
-    "We started with a `Stream` called `readings`, which contained the data that we published in the Event Streams service. Next, we created a new Stream `sensordata` by subscribing to the topic in the EventStreams Service, filtered out one sensor of interest, and `published` the filtered stream for other applications running within our Streams instance to access.\n",
+    "We started with a `Stream` called `readings`, which contained the data that we published in the Event Streams service. Next, we created a new Stream `sensordata` by subscribing to the topic in the Event Streams Service, filtered out one sensor of interest, and `published` the filtered stream for other applications running within our Streams instance to access.\n",
     "\n",
     "After submitting the application to the IBM Streams service, we connected to the `sensor3_view` view to see the data of sensor 3 within the notebook.\n",
     "\n",
@@ -541,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
