instance name, job cancellation modified

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -135,8 +135,17 @@
     "\n",
     "IBM Event Streams in the public cloud is a fully managed Kafka broker. You connect it by using _service credentials_. You can easily [generate a Kafka configuration from Event Streams service credentials](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties_for_eventstreams):\n",
     "\n",
+    "\n",
+    "    import streamsx.kafka as kafka\n",
     "    credentials = ... # either a file name or the credentials JSON as a string\n",
-    "    kafka_config = streamsx.kafka.create_connection_properties_for_eventstreams(credentials)\n",
+    "    kafka_config = kafka.create_connection_properties_for_eventstreams(credentials)\n",
+    "    \n",
+    "For example, when you create a data asset `eventstreams.json` in your project that contains the service credentials, you can create a Kafka configuration this way:\n",
+    "\n",
+    "    import streamsx.kafka as kafka\n",
+    "    kafka_config = kafka.create_connection_properties_for_eventstreams('/project_data/data_asset/eventstreams.json')\n",
+    "    \n",
+    "This config can be used with the [KafkaConsumer](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.KafkaConsumer) and [KafkaProducer](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.KafkaProducer).\n",
     "\n",
     "<a id=\"create_1\"></a>\n",
     "# 2. Create the consumer application\n",
@@ -617,27 +626,7 @@
     "\n",
     "# 6. Cancel the jobs\n",
     "\n",
-    "This cell generates widgets you can use to cancel the jobs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cancel the jobs in the IBM Streams service interactively\n",
-    "producer_submission_result.cancel_job_button()\n",
-    "consumer_submission_result.cancel_job_button()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also interact with the job through the [Job](https://streamsxtopology.readthedocs.io/en/stable/streamsx.rest_primitives.html#streamsx.rest_primitives.Job) object returned from `producer_submission_result.job` and `consumer_submission_result.job`\n",
-    "\n",
-    "For example, use `producer_job.cancel()` to cancel the running producer job directly."
+    "The Streams jobs are running in the Streams service. You can cancel them within the notebook or delete them from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -648,8 +637,8 @@
    "source": [
     "# cancel the jobs directly using the Job objects\n",
     "\n",
-    "#producer_job.cancel()\n",
-    "#consumer_job.cancel()"
+    "producer_job.cancel()\n",
+    "consumer_job.cancel()"
    ]
   },
   {
