--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the Event Streams service, create the *topic* where you want to publish the data. You can use the default settings for partitions and retention hours. Enter the topic name when you run the next cell.\n"
+    "In the Event Streams service, create the *topic* where you want to publish the data. You can use the default settings for partitions and retention hours. Enter the topic name before you run the next cell.\n"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic = # Enter the topic name here"
+    "topic = \"my_topic\"  ## change this to an existing topic"
    ]
   },
   {
@@ -474,23 +474,14 @@
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
     "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n",
+    "\n",
+    "\n",
     "<a name=\"cancel\"></a>\n",
     "\n",
-    "# 5. Cancel the job"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This cell generates a widget you can use to cancel the job."
+    "# 5. Cancel the job\n",
+    "\n",
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -500,16 +491,7 @@
    "outputs": [],
    "source": [
     "# cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also interact with the job through the [Job](https://streamsxtopology.readthedocs.io/en/stable/streamsx.rest_primitives.html#streamsx.rest_primitives.Job) object returned from `submission_result.job`\n",
-    "\n",
-    "For example, use `job.cancel()` to cancel the running job directly."
+    "streams_job.cancel()"
    ]
   },
   {
