instance name, job cancellation modified

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -429,7 +429,7 @@
    "source": [
     "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
-    "This cell generates a widget you can use to cancel the job.\n"
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**.\n"
    ]
   },
   {
@@ -438,19 +438,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
+    "# cancel the job directly using the Job object\n",
+    "streams_job.cancel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running job directly.\n",
-    "\n",
     "## Summary\n",
     "\n",
     "We created an application which connects to Db2 database, dropped a table, created a table, inserted some rows into table and reads the rows.\n",
@@ -465,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
