--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change \"my-instance\" to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -342,7 +342,7 @@
    "source": [
     "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
-    "This cell generates a widget you can use to cancel the job.\n"
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**.\n"
    ]
   },
   {
@@ -351,19 +351,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
+    "# cancel the job directly using the Job object\n",
+    "streams_job.cancel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running job directly.\n",
-    "\n",
     "## Summary\n",
     "In this sample we created an HBASE application which connects to the Hadoop server, insetrted some rows into HBASE table and get the rows from the table.\n",
     "\n",
