--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name =\"my_instance\" ## Change \"my_instance\" to current running Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -393,7 +393,7 @@
    "source": [
     "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
-    "This cell generates a widget you can use to cancel the job.\n"
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**.\n"
    ]
   },
   {
@@ -402,19 +402,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
+    "# cancel the job directly using the Job object\n",
+    "streams_job.cancel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running job directly.\n",
-    "\n",
     "## Summary\n",
     "In this sample we created an HDFS application which connects to the Hadoop server, inserted some lines in HDFS files and scans a HDFS directory and reads the lines from HDFS files.\n",
     "\n",
