--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Import  the `streamsx.toolkits` package and verify the package version"
+    "   ### 1.2 Import  the `streamsx.toolkits` package and verify the package version"
    ]
   },
   {
@@ -347,6 +347,7 @@
     "                                   config=cfg)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result.job:\n",
+    "    streams_job = submission_result.job\n",
     "    print(\"JobId: \", submission_result['id'] , \"Name: \", submission_result['name'])"
    ]
   },
@@ -367,7 +368,7 @@
    "source": [
     "### 4.5 Cancel the job\n",
     "\n",
-    "This cell generates a widget you can use to cancel the job."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -376,19 +377,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
+    "# cancel the job directly using the Job object\n",
+    "streams_job.cancel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running job directly.\n",
-    "\n",
     "## Summary\n",
     "\n",
     "We launched an existing SPL application with the Python API."
@@ -562,7 +558,7 @@
    "source": [
     "### 5.7 Cancel the jobs\n",
     "\n",
-    "The cells below generate a widget you can use to cancel the jobs."
+    "The Streams jobs are running in the Streams service. You can cancel them within the notebook or delete them from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -572,21 +568,16 @@
    "outputs": [],
    "source": [
     "# cancel the job in the IBM Streams service\n",
-    "submission_result_nlp_sample.cancel_job_button()\n",
+    "submission_result_nlp_sample.job.cancel()\n",
     "\n",
     "# cancel the microservice job in the IBM Streams service\n",
-    "submission_result_microservice.cancel_job_button()"
+    "submission_result_microservice.job.cancel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result_nlp_sample.job` and `submission_result_microservice.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running jobs directly.\n",
-    "\n",
     "## Summary\n",
     "\n",
     "We launched an application with the Python API that works as microservice. We created an application to connect to this microservice with `publish` and `subsribe`."
@@ -703,7 +694,7 @@
     "# Dump output stream to console log\n",
     "ngrams.outputs[0].print()\n",
     "\n",
-    "add_toolkit(topo_spl, nlp_tk)\n"
+    "add_toolkit(topo_spl, nlp_tk)"
    ]
   },
   {
@@ -751,7 +742,7 @@
    "source": [
     "### 6.5 Cancel the job\n",
     "\n",
-    "This cell generates a widget you can use to cancel the job."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -760,19 +751,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cancel the job in the IBM Streams service\n",
-    "submission_result_spl_sample.cancel_job_button()"
+    "# cancel the job directly using the Job object\n",
+    "submission_result_spl_sample.job.cancel()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result_spl_sample.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running job directly.\n",
-    "\n",
     "## Summary\n",
     "\n",
     "We used SPL operators with the Python Topology API."
@@ -781,7 +767,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 + WML CE 1.6.2",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
