--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -169,7 +169,7 @@
     "    timeSpan = time.time() + 30;\n",
     "    while time.time() < timeSpan:\n",
     "        print(queue.get())\n",
-    "    source_view.stop_data_fetch()\n"
+    "    source_view.stop_data_fetch()"
    ]
   },
   {
@@ -181,7 +181,7 @@
     "\n",
     "# 5. Cancel the job\n",
     "\n",
-    "This cell generates widgets you can use to cancel the jobs."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -190,16 +190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission_result.cancel_job_button()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also interact with the job through the [Job](https://streamsxtopology.readthedocs.io/en/stable/streamsx.rest_primitives.html#streamsx.rest_primitives.Job) object returned from `submission_result.job`\n",
-    "\n",
-    "For example, use `streams_job.cancel()` to cancel the running job directly."
+    "# cancel the job directly using the Job object\n",
+    "streams_job.cancel()"
    ]
   }
  ],
@@ -219,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
