--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -479,7 +479,8 @@
     "print(submission_result)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result.job:\n",
-    "    print(\"JobId: \", submission_result.job.id , \"Name: \", submission_result.job.name)"
+    "    streams_job = submission_result.job\n",
+    "    print (\"JobId: \", streams_job.id , \"\\nJob name: \", streams_job.name)"
    ]
   },
   {
@@ -555,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell generates a widget you can use to cancel the job."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
    ]
   },
   {
@@ -564,17 +565,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also interact with the job through the [Job](https://streamsxtopology.readthedocs.io/en/stable/streamsx.rest_primitives.html#streamsx.rest_primitives.Job) object returned from `submission_result.job`\n",
-    "\n",
-    "For example, use `job.cancel()` to cancel the running job directly."
+    "# cancel the job directly using the Job object\n",
+    "streams_job.cancel()"
    ]
   },
   {
