--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -479,7 +479,7 @@
     "queue = averages_view.start_data_fetch()\n",
     "try:\n",
     "    for val in range(10):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    averages_view.stop_data_fetch()"
    ]
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
