--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -35,15 +35,38 @@
     "\n",
     "\n",
     "\n",
-    "## <a name=\"setup\"> </a> 1. Setup\n",
+    "# Prerequisites\n",
     "\n",
-    "### 1.1 Add credentials for the IBM Streams service\n",
+    "This notebook can be used as-is from within an IBM Cloud Pak for Data project. \n",
+    "\n",
+    "If you are not running this notebook from within IBM Cloud Pak for Data, [follow these steps to make sure you have installed all the prerequisites](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-2/).\n",
+    "\n",
+    "<a name=\"setup\"></a>\n",
+    "\n",
+    "# 1. Set up a connection to the Streams instance\n",
+    "\n",
+    "\n",
+    "To submit the application for execution, you have to connect to the Streams instance. The application is always the same, but the information required to connect to the instance depends on the target installation of Streams.\n",
+    "\n",
+    "- [I'm running the notebook from an IBM Cloud for Data project](#cpd)\n",
+    "- [I'm using IBM Watson Studio, Jupyter Notebooks, or any other development environment](#notcpd)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"cpd\"></a>\n",
+    "### 1.1a Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
     "1. From the navigation menu, click **My instances**.\n",
     "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name.\n"
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name\n",
+    "4. Run the cell and skip to section 1.2\n",
+    "\n",
+    "The cell below defines a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined."
    ]
   },
   {
@@ -53,8 +76,44 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
+    "from streamsx.topology import context\n",
+    "\n",
     "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "\n",
+    "def submit_topology(topo):\n",
+    "    global cfg\n",
+    "    # Disable SSL certificate verification if necessary\n",
+    "    cfg[context.ConfigParams.SSL_VERIFY] = False\n",
+    "    # Topology wil be deployed as a distributed app\n",
+    "    contextType = context.ContextTypes.DISTRIBUTED\n",
+    "    return context.submit (contextType, topo, config = cfg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"notcpd\"></a>\n",
+    "### 1.1b Connect to a Streams instance from IBM Watson Studio and other environments\n",
+    "\n",
+    "The code for each scenario is available in the development guide.\n",
+    "\n",
+    "- Choose the tab that best matches your environment. Copy the code under the heading **Copy this code snippet**.\n",
+    "- Paste it in the cell below.\n",
+    "\n",
+    "[Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-3/#1-set-up-a-connection-to-the-streams-instance)\n",
+    "\n",
+    "Each snippet will define a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Paste snippet from development guide\n"
    ]
   },
   {
@@ -134,18 +193,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamsx.topology import context\n",
-    "from streamsx.topology.context import ContextTypes\n",
-    "\n",
-    "# Disable SSL certificate verification if necessary\n",
-    "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
-    "# submit the topology 'topo'\n",
-    "submission_result = context.submit (ContextTypes.DISTRIBUTED, topo, config = cfg)\n",
-    "\n",
     "# The submission_result object contains information about the running application, or job\n",
+    "print(\"Submitting Topology to Streams for execution..\")\n",
+    "submission_result = submit_topology(topo)\n",
+    "\n",
     "if submission_result.job:\n",
-    "    streams_job = submission_result.job\n",
-    "    print (\"JobId: \", streams_job.id , \"\\nJob name: \", streams_job.name)"
+    "  streams_job = submission_result.job\n",
+    "  print (\"JobId: \", streams_job.id , \"\\nJob name: \", streams_job.name)\n",
+    "else:\n",
+    "  print(\"Submission failed: \"   + str(submission_result))"
    ]
   },
   {
@@ -168,7 +224,7 @@
     "    queue = source_view.start_data_fetch()\n",
     "    timeSpan = time.time() + 30;\n",
     "    while time.time() < timeSpan:\n",
-    "        print(queue.get())\n",
+    "        print(queue.get(timeout=60))\n",
     "    source_view.stop_data_fetch()"
    ]
   },
@@ -211,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
