update fetch view data, resolves #39

--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -960,7 +960,7 @@
     "queue = score_view.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    score_view.stop_data_fetch()"
    ]
