--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -406,7 +406,7 @@
     "queue = selectView.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    selectView.stop_data_fetch()"
    ]
