--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -441,7 +441,7 @@
     "queue = sensor3_view.start_data_fetch()\n",
     "try:\n",
     "    for val in range(10):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    sensor3_view.stop_data_fetch()"
    ]
