--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -320,7 +320,7 @@
     "queue = scannedView.start_data_fetch()\n",
     "try:\n",
     "    for val in range(5):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    scannedView.stop_data_fetch()"
    ]
