--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -371,7 +371,7 @@
     "queue = readView.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    readView.stop_data_fetch()"
    ]
