--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -587,7 +587,7 @@
     "queue = streamView.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    streamView.stop_data_fetch()"
    ]
