--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -489,7 +489,7 @@
     "queue = streamView.start_data_fetch()\n",
     "try:\n",
     "    for val in range(30):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    streamView.stop_data_fetch()"
    ]
