--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -92,7 +92,11 @@
     "from streamsx.topology import context\n",
     "\n",
     "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "\n",
+    "try:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "except TypeError:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
     "\n",
     "def submit_topology(topo):\n",
     "    global cfg\n",
