--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -78,8 +78,11 @@
     "from icpd_core import icpd_util\n",
     "from streamsx.topology import context\n",
     "\n",
-    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "streams_instance_name = \"streams\" ## Change this to Streams instance\n",
+    "try:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "except TypeError:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
     "\n",
     "def submit_topology(topo):\n",
     "    global cfg\n",
