--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -662,7 +662,11 @@
    "source": [
     "from icpd_core import icpd_util\n",
     "streams_instance_name = \"streams\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n"
+    "\n",
+    "try:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "except TypeError:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
   {
