--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -61,7 +61,10 @@
    "source": [
     "from icpd_core import icpd_util\n",
     "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "try:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "except TypeError:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
   {
@@ -781,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
