brocken connection link fixed #44

--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "### <a name=\"credentials\"> </a> 1.3 Configure the connection to HBASE\n",
     "\n",
-    "Perform the steps [Connecting to data source](https://docs-icpdata.mybluemix.net/docs/content/SSQNUZ_current/com.ibm.icpdata.doc/igc/t_connect_data_sources.html) \n",
+    "Perform the steps [Connecting to data source](https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/cpd/access/connect-data-sources.html) \n",
     "and create an external configuration for your HBASE connection.\n",
     "\n",
     "1. Select as connection type \"HDFS-HDP\"\n",
