Update streamsx.wml notebook
New parameter bundle_size
Update documentation

--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -662,11 +662,7 @@
    "source": [
     "from icpd_core import icpd_util\n",
     "streams_instance_name = \"streams\" ## Change this to Streams instance\n",
-    "\n",
-    "try:\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
-    "except TypeError:\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n"
    ]
   },
   {
@@ -964,7 +960,7 @@
     "queue = score_view.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
-    "        print(queue.get(timeout=60))    \n",
+    "        print(queue.get())    \n",
     "finally:\n",
     "    score_view.stop_data_fetch()"
    ]
